test_suite/tests/ui/fail/invalid_attribute_key/invalid_option_key.rs
use clapi::macros::*;

#[command]
#[option(number, abc="hello")]
fn app(number: String){}

fn main(){}