test_suite/tests/ui/fail/invalid_attribute_key/invalid_option_key.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_key.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: invalid `option` key `abc`
